--- a/home/index.html
+++ b/home/index.html
@@ -25,9 +25,9 @@
     </div>
     </div>
 
-    <div class="wrapper">
+    <!-- <div class="wrapper">
 
-    </div>
+    </div> -->
 
   </body>
 </html>
