card style update

--- a/home/try/try.html
+++ b/home/try/try.html
@@ -301,6 +301,42 @@
   <i id="right1" class="fa-solid fa-chevron-right"></i>
 </div>
 
+<!-- !step up your shoe game -->
+<div id="step-up">
+  <img src="https://images.bewakoof.com/uploads/grid/app/shoe-strip-1675085026.jpg" alt="">
+</div>
+
+<!-- !TOP ACCESSORIES-->
+<div id="categories-div">
+  <p class="heading">TOP ACCESSORIES</p>
+  <div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Mobile-covers-1672907490.png" alt=""></a></div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-mugs-1673005212.jpg" alt=""></a></div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-backpacks-1672907481.png" alt=""></a></div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-notebooks-1672896372.jpg" alt=""></a></div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-sliders-men-1672907494.png" alt=""></a></div>
+    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-caps-1672907483.png" alt=""></a></div>
+  
+  </div>
+  </div>
+
+
+  <!-- !OUR BEST PICKS -->
+<div id="hot-section">
+  <p class="heading">OUR BEST PICKS</p>
+  <div id="hot-section-div">
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/fullsleeves-tshirts-midsize-banner-1674050707.jpg" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/midsizebanner-women-jeans-5-1675245576.jpg" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/plus-size-mid-banner-1671788992.jpg" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/midsize-banners-air-ovrszd-cargo-jogs-m-1674133076.jpg" alt=""></a>
+  </div>
+  </div>
+
+  <!-- !LOVE US  -->
+<div id="step-up1">
+  <img  src="https://images.bewakoof.com/uploads/grid/app/desktop-survey-1673330211.jpg" alt="">
+</div>
+
 
 </body>
 </html>
