content half complte

--- a/home/try/try.html
+++ b/home/try/try.html
@@ -337,7 +337,15 @@
   <img  src="https://images.bewakoof.com/uploads/grid/app/desktop-survey-1673330211.jpg" alt="">
 </div>
 
+  <!-- !BECOME A TRIBE MEMBER  -->
+  <div id="step-up1">
+    <img  src="https://images.bewakoof.com/uploads/grid/app/Desktop-Strip-3-1672040129.jpg" alt="">
+  </div>
 
+   <!-- !VOTE FOR NEW DESIGN  -->
+   <div id="step-up1">
+    <img  src="https://images.bewakoof.com/uploads/grid/app/Desktop-Strip-3-1669022420.jpg" alt="">
+  </div>
 </body>
 </html>
 <script src="try.js"></script>
