--- a/SingleProduct/singleProduct.html
+++ b/SingleProduct/singleProduct.html
@@ -11,7 +11,7 @@
     />
     <link href="./style.css" rel="stylesheet" />
 
-    <script src="singleProduct.js" defer></script>
+    <script src="singleProduct.js" type="module" defer></script>
     <script
       src="https://kit.fontawesome.com/6c1f5c4092.js"
       crossorigin="anonymous"
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div id="navbar"></div>
-    <div class="container-md p-0">
-      <div id="product" class="row"></div>
+    <div class="container-lg p-0" id="main">
+      <div id="product" class="row px-lg-5"></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
