--- a/home/try/try.html
+++ b/home/try/try.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Online Fashion Shopping for Men, Woman, 
+       Accessories - Bewakoof.com
+    </title>
+    <link rel="icon" type="image/x-icon" href="https://play-lh.googleusercontent.com/mzdgrAg8_sTf0e-G3eIi3MAIbaxtuiJnIcHUQmuGE8NQVbO30HqvgJ-gKIf-hwpa6g">
     <script
     src="https://kit.fontawesome.com/f276ecc4c7.js"
     crossorigin="anonymous"
@@ -346,6 +349,65 @@
    <div id="step-up1">
     <img  src="https://images.bewakoof.com/uploads/grid/app/Desktop-Strip-3-1669022420.jpg" alt="">
   </div>
+
+
+  <!-- !FOTER SECTION -->
+  <footer>
+    <div class="footerDiv">
+      <div class="container">
+        <div id="logo1"><img src="updatedlogoweb.png" alt=""></div>
+
+        <div class="section">
+          <div>
+            <span>CUSTOMER SERVICE</span>
+            <ul>
+              <li><a href="">Contuct Us</a></li>
+              <li><a href="">Track Order</a></li>
+              <li><a href="">Return Order</a></li>
+              <li><a href="">Cancel Order</a></li>
+            </ul>
+          </div>
+
+          <div>
+            <span>COMPANY</span>
+            <ul>
+              <li><a href="">About Us</a></li>
+              <li><a href="">We're Hiring</a></li>
+              <li><a href="">Terms & Conditions</a</li>
+              <li><a href="">Privacy Policy</a></li>
+              <li><a href="">Blog</a></li>
+            </ul>
+          </div>
+
+<div >
+  <span class="connect">CONNECT WITH US</span>
+  <!-- <div> -->
+    <div class="socialIcoMobile">
+      <div id="first" class="mrgin-btn"><a href="https://www.facebook.com/bewakoofcom"><i class="fa-brands fa-square-facebook"></i> 4.7M People Like this</a></div>
+
+    <div class="mrgin-btn"><a href="https://www.instagram.com/bewakoofofficial/"> <i class="fa-brands fa-instagram"></i>1M Followers</a></div>
+
+  </div>
+  <div class="mrgin-btn" id="flex">
+    <a href="https://twitter.com/bewakoof"><i class="fa-brands fa-twitter"></i></a>
+    <a href="https://in.pinterest.com/bewakoof/"><i class="fa-brands fa-pinterest"></i></a>
+    <a href="https://www.snapchat.com/add/bewakoof_tv"><i class="fa-brands fa-snapchat"></i></a>
+    <a href="https://apps.apple.com/in/app/bewakoof/id1100190514"><i class="fa-brands fa-apple"></i></a>
+  </div>
+  <!-- </div> -->
+</div>
+
+        </div>
+
+        <div class="section1">
+        <img src="updatefooter.png" alt="">
+
+        </div>
+
+      </div>
+    </div>
+    <div class="hr"></div>
+  </footer>
 </body>
 </html>
 <script src="try.js"></script>
