added in homepage

--- a/home/try/try.html
+++ b/home/try/try.html
@@ -159,7 +159,7 @@
             />
           </div>
           <div id="login-wishlist-cart">
-            <p>Login</p>
+            <p style="color: black">Login</p>
             <div><i class="fa-regular fa-heart"></i></div>
             <div><i class="fa-solid fa-cart-shopping"></i></div>
           </div>
