--- a/send_otp.html
+++ b/send_otp.html
@@ -13,11 +13,11 @@
         <div style="float: right; cursor: pointer;" id="close-popup">&times;</div>
 
         <!-- <p>Enter your number: <input type="text" id="number"></p> -->
-        <h1>Verify your mobile</h1>
+        <h3>Verify your mobile</h3>
         <p>OTP will be sent to your number</p>
         <p>+91-<span id="entered-number"></span></p>
         <!-- <hr> -->
-        <hr style="border: 1px solid rgb(148, 148, 153); width: 75%;">
+        <hr style="border: 1px solid rgb(148, 148, 153); width: 75%; padding-right: 15px;">
         <button id="get-otp">GET OTP</button>
       </div>
 </body>
