card slider added

--- a/home/try/try.html
+++ b/home/try/try.html
@@ -233,7 +233,7 @@
 
     <!-- !DESIGNS OF THE WEEK -->
 <div id="parent-img-div">
-  <p class="heading">DESIGNS OF THE WEEK</p>
+  <p class="heading"  style="color: black;">DESIGNS OF THE WEEK</p>
   <div id="img-div">
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/DOTW-Split-banner-Desktop-Men-1675143052.png" alt=""></a></div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/DOTW-Split-banner-Desktop-Women-1675143053.png" alt=""></a></div>
@@ -242,7 +242,7 @@
 
 <!-- !TRENDING CATEGORIES SECTION -->
 <div class="trending-div">
-<p class="heading">TRENDING CATEGORIES</p>
+<p class="heading"  style="color: black;">TRENDING CATEGORIES</p>
 <div id="full-width">
 <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-printed-tshirt-men-1672915214.png" alt=""></a>
 <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Oversize-tshirt-1672915214.png" alt=""></a>
@@ -261,14 +261,294 @@
 </div>
 </div>
 
+
+
 <!-- !Beggest deal seaction div need to be completed here -->
 <!-- *pending -->
+
+<main>
+  <span class="left-arrow"><i class="fa-solid fa-chevron-left"></i></span>
+  
+  
+  <span class="right-arrow"><i class="fa-solid fa-chevron-right"></i></span>
+  <h3 class="big-deal" style="text-align:center">BIGGEST DEALS!</h3>
+      
+  <section>
+    <div class="product">
+      <img
+        src="https://images.bewakoof.com/t320/women-white-freinds-life-m-printed-t-shirt-534623-1673585035-1.jpg"
+        alt=""
+      />
+<div style="padding-left: 10px;">
+      <div class="detail">
+        <div class="heading-div">
+          <p>Bewakoof</p>
+          <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+        </div>
+        <samp><i class="fa-regular fa-heart"></i></samp>
+      </div>
+      <div class="button" id="spacing">
+        <h6>₹960</h6>
+        <h6>₹1499</h6>
+        <h6>39% OFF</h6>
+      </div>
+</div>
+    </div>
+
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-rise-of-guru-printed-t-shirt-556916-1673011371-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+      <div class="detail">
+        <div class="heading-div">
+          <p>Bewakoof</p>
+          <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+        </div>
+        <samp><i class="fa-regular fa-heart"></i></samp>
+      </div>
+      <div class="button" id="spacing">
+        <h6>₹960</h6>
+        <h6>₹1499</h6>
+        <h6>39% OFF</h6>
+      </div>
+</div>
+
+    </div>
+
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-s-purple-the-warrior-king-graphic-printed-oversized-t-shirt-565902-1672377608-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+      <div class="detail">
+        <div class="heading-div">
+          <p>Bewakoof</p>
+          <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+        </div>
+        <samp><i class="fa-regular fa-heart"></i></samp>
+      </div>
+      <div class="button" id="spacing">
+        <h6>₹960</h6>
+        <h6>₹1499</h6>
+        <h6>39% OFF</h6>
+      </div>
+</div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-classic-mickey-f-b-printed-t-shirt-563341-1672312142-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+  <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-s-black-metallica-oversized-fit-t-shirt-564902-1671801834-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/black-red-boyfriend-t-shirt-568955-1673849287-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-s-white-customizable-half-sleeve-regular-fit-t-shirt-569067-1673855324-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/women-s-black-customizable-streetwear-oversized-t-shirt-569072-1673947355-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+  <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-s-blue-customizable-half-sleeve-regular-fit-t-shirt-569066-1673855307-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+  <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/women-pink-oversized-printed-dress-554162-1671775633-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/women-s-purple-harry-s-house-graphic-printed-oversized-t-shirt-565913-1672383811-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+      <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+    <div class="product">
+      <!-- <picture> -->
+      <img
+        src="https://images.bewakoof.com/t320/men-s-ginger-root-solid-oversized-fit-t-shirt-552870-1672295637-1.jpg"
+        alt=""
+      />
+      <!-- </picture> -->
+  <div style="padding-left: 10px;">
+  <div class="detail">
+    <div class="heading-div">
+    <p>Bewakoof</p>
+    <p class="font-size">Men's Black Super Loose Fit T-shirt</p>
+    </div>
+    <samp><i class="fa-regular fa-heart"></i></samp>
+  </div>
+  <div class="button" id="spacing">
+    <h6>₹960</h6>
+    <h6>₹1499</h6>
+    <h6>39% OFF</h6>
+  </div>
+  </div>
+    </div>
+  </section>
+</main>
+
+
 <!-- !.............................................! -->
 
 
 <!-- !TOO HOT TO BE MISSED -->
 <div id="hot-section">
-<p class="heading">TOO HOT TO BE MISSED</p>
+<p class="heading" style="color: black;">TOO HOT TO BE MISSED</p>
 <div id="hot-section-div">
   <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/revamped-banner-MID-SIZE-B1G1-02-1673359273.jpg" alt=""></a>
   <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/new-mid-banner-buy2get1free-1674817171.jpg" alt=""></a>
@@ -279,7 +559,7 @@
 
 <!-- !CATEGORIES TO BAG -->
 <div id="categories-div">
-<p class="heading">CATEGORIES TO BAG</p>
+<p class="heading" style="color: black;">CATEGORIES TO BAG</p>
 <div>
   <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Jeans-men-1672915059.png" alt=""></a></div>
   <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668772677.jpg" alt=""></a></div>
@@ -311,7 +591,7 @@
 
 <!-- !TOP ACCESSORIES-->
 <div id="categories-div">
-  <p class="heading">TOP ACCESSORIES</p>
+  <p class="heading"  style="color: black;">TOP ACCESSORIES</p>
   <div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Mobile-covers-1672907490.png" alt=""></a></div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-mugs-1673005212.jpg" alt=""></a></div>
@@ -326,7 +606,7 @@
 
   <!-- !OUR BEST PICKS -->
 <div id="hot-section">
-  <p class="heading">OUR BEST PICKS</p>
+  <p class="heading"  style="color: black;">OUR BEST PICKS</p>
   <div id="hot-section-div">
     <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/fullsleeves-tshirts-midsize-banner-1674050707.jpg" alt=""></a>
     <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/midsizebanner-women-jeans-5-1675245576.jpg" alt=""></a>
