--- a/home/index.html
+++ b/home/index.html
@@ -11,9 +11,11 @@
   <link rel="icon" type="image/x-icon" href="https://play-lh.googleusercontent.com/mzdgrAg8_sTf0e-G3eIi3MAIbaxtuiJnIcHUQmuGE8NQVbO30HqvgJ-gKIf-hwpa6g">
   <script src="https://kit.fontawesome.com/f276ecc4c7.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/home/style/index.css">
-  <link rel="stylesheet" href="/home/style/index1.css">
+  <link rel="stylesheet" href="/home/style/imgSlider1.css">
+  <link rel="stylesheet" href="/home/style/imgSlider2.css">
   <link rel="stylesheet" href="/home/style/footer.css">
   <link rel="stylesheet" href="/home/style/navbar.css">
+  <link rel="stylesheet" href="/home/style/cardSlider.css">
 </head>
 
 <body>
@@ -233,7 +235,7 @@
 
     <!-- !DESIGNS OF THE WEEK -->
 <div id="parent-img-div">
-  <p class="heading">DESIGNS OF THE WEEK</p>
+  <p class="heading"  style="color: black;">DESIGNS OF THE WEEK</p>
   <div id="img-div">
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/DOTW-Split-banner-Desktop-Men-1675143052.png" alt=""></a></div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/DOTW-Split-banner-Desktop-Women-1675143053.png" alt=""></a></div>
@@ -242,7 +244,7 @@
 
 <!-- !TRENDING CATEGORIES SECTION -->
 <div class="trending-div">
-<p class="heading">TRENDING CATEGORIES</p>
+<p class="heading"  style="color: black;">TRENDING CATEGORIES</p>
 <div id="full-width">
 <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-printed-tshirt-men-1672915214.png" alt=""></a>
 <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Oversize-tshirt-1672915214.png" alt=""></a>
@@ -262,13 +264,15 @@
 </div>
 
 <!-- !Beggest deal seaction div need to be completed here -->
-<!-- *pending -->
+<main class="main">
+ 
+</main>
 <!-- !.............................................! -->
 
 
 <!-- !TOO HOT TO BE MISSED -->
 <div id="hot-section">
-<p class="heading">TOO HOT TO BE MISSED</p>
+<p class="heading"  style="color: black;">TOO HOT TO BE MISSED</p>
 <div id="hot-section-div">
   <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/revamped-banner-MID-SIZE-B1G1-02-1673359273.jpg" alt=""></a>
   <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/new-mid-banner-buy2get1free-1674817171.jpg" alt=""></a>
@@ -279,7 +283,7 @@
 
 <!-- !CATEGORIES TO BAG -->
 <div id="categories-div">
-<p class="heading">CATEGORIES TO BAG</p>
+<p class="heading"  style="color: black;">CATEGORIES TO BAG</p>
 <div>
   <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Jeans-men-1672915059.png" alt=""></a></div>
   <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668772677.jpg" alt=""></a></div>
@@ -311,7 +315,7 @@
 
 <!-- !TOP ACCESSORIES-->
 <div id="categories-div">
-  <p class="heading">TOP ACCESSORIES</p>
+  <p class="heading"  style="color: black;">TOP ACCESSORIES</p>
   <div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Mobile-covers-1672907490.png" alt=""></a></div>
     <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-mugs-1673005212.jpg" alt=""></a></div>
@@ -326,7 +330,7 @@
 
   <!-- !OUR BEST PICKS -->
 <div id="hot-section">
-  <p class="heading">OUR BEST PICKS</p>
+  <p class="heading"  style="color: black;">OUR BEST PICKS</p>
   <div id="hot-section-div">
     <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/fullsleeves-tshirts-midsize-banner-1674050707.jpg" alt=""></a>
     <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/midsizebanner-women-jeans-5-1675245576.jpg" alt=""></a>
@@ -357,5 +361,7 @@
   </footer>
 </body>
 </html>
-<script src="/home/script/index.js" type="module"></script>
-<script src="/home/script/index1.js"></script>
+<script src="/home/script/imgSlider1.js" type="module"></script>
+<script src="/home/script/imgSlider2.js"></script>
+<script src="/home/script/cardSlider.js" type="module"></script>
+<script src="/home/script/nav.js" type="module"></script>
