--- a/home/index.html
+++ b/home/index.html
@@ -263,11 +263,11 @@
 </div>
 </div>
 
-<!-- !Beggest deal seaction div need to be completed here -->
+<!-- !Beggest deal seaction div card slider -->
 <main class="main">
  
 </main>
-<!-- !.............................................! -->
+<!-- !..................END...........................! -->
 
 
 <!-- !TOO HOT TO BE MISSED -->
