added all the nested filtering

--- a/shopPage/shop.html
+++ b/shopPage/shop.html
@@ -145,70 +145,103 @@
               <div class="card card-body py-0 border-0 px-4">
                 <div class="row">
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: red; color: red; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: red;
+                      color: red;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
                     red
                   </p>
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: blue; color: blue; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: blue;
+                      color: blue;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
                     blue
                   </p>
                   <p
-                    class="col-2 mx-4"
+                    class="col-3 mx-2 color"
                     style="
                       background-color: yellow;
                       color: yellow;
-                      height: 35px;
+                      height: 40px;
+                      overflow: hidden;
                     "
                   >
                     yellow
                   </p>
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: green; color: green; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: green;
+                      color: green;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
-                    gr
+                    green
                   </p>
                   <p
-                    class="col-2 mx-4"
+                    class="col-3 mx-2 color"
                     style="
                       background-color: orange;
                       color: orange;
-                      height: 35px;
+                      height: 40px;
+                      overflow: hidden;
                     "
                   >
                     or
                   </p>
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: cyan; color: cyan; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: cyan;
+                      color: cyan;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
                     cyan
                   </p>
                   <p
-                    class="col-2 mx-4"
+                    class="col-3 mx-2 color"
                     style="
                       background-color: magenta;
                       color: magenta;
-                      height: 35px;
+                      height: 40px;
+                      overflow: hidden;
                     "
                   >
                     .
                   </p>
 
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: grey; color: grey; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: grey;
+                      color: grey;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
                     .
                   </p>
 
                   <p
-                    class="col-2 mx-4"
-                    style="background-color: black; color: black; height: 35px"
+                    class="col-3 mx-2 color"
+                    style="
+                      background-color: black;
+                      color: black;
+                      height: 40px;
+                      overflow: hidden;
+                    "
                   >
                     black
                   </p>
