updated some functionality

--- a/shopPage/shop.html
+++ b/shopPage/shop.html
@@ -24,7 +24,7 @@
   <body>
     <div class="container-xl">
       <div class="row">
-        <div class="col-md-3 d-none d-md-block position-relative sticky-top">
+        <div id="filter-card" class="col-md-3 d-none d-md-block">
           <div id="collapse-start" class="px-5">
             <div class="d-flex justify-content-between px-4 pt-3 mt-3">
               <p>
