--- a/shopPage/shop.html
+++ b/shopPage/shop.html
@@ -14,6 +14,9 @@
       body {
         font-family: "Montserrat", sans-serif;
       }
+      .colorAdd {
+        color: #42a2a2;
+      }
     </style>
     <script src="shop.js" type="module" defer></script>
     <script
@@ -29,8 +32,8 @@
             <div class="d-flex justify-content-between px-4 pt-3 mt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#offers"
                   role="button"
@@ -53,8 +56,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#description"
                   role="button"
@@ -83,8 +86,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#exchange"
                   role="button"
@@ -122,8 +125,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#delivery"
                   role="button"
@@ -253,8 +256,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#design"
                   role="button"
@@ -285,8 +288,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#fit"
                   role="button"
@@ -313,8 +316,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#sleeve"
                   role="button"
@@ -339,8 +342,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#neck"
                   role="button"
@@ -370,8 +373,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#type"
                   role="button"
@@ -398,8 +401,8 @@
             <div class="d-flex justify-content-between px-4 pt-3">
               <p>
                 <a
-                  class="text-decoration-none text-dark fw-normal"
-                  style="font-size: 14px"
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
                   data-bs-toggle="collapse"
                   href="#rating"
                   role="button"
@@ -422,6 +425,33 @@
               <p class="rating ps-4">2.5 and above</p>
               <p class="rating ps-4">2 and above</p>
               <p class="rating ps-4">1 and above</p>
+            </div>
+
+            <!-- =====================sort==================== -->
+            <div class="d-flex justify-content-between px-4 pt-3">
+              <p>
+                <a
+                  class="text-decoration-none text-dark"
+                  style="font-size: 14px; font-weight: 500"
+                  data-bs-toggle="collapse"
+                  href="#sort"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="sort"
+                  >Sort By</a
+                >
+              </p>
+              <span class="arrow-dwn">
+                <i class="fa-solid fa-angle-right"></i>
+              </span>
+            </div>
+
+            <div class="border-0 collapse mt-0" id="sort">
+              <div class="card card-body py-0 border-0 px-4"></div>
+              <p class="sort ps-4">Popular</p>
+              <p class="sort ps-4">New</p>
+              <p class="sort ps-4">Low To High</p>
+              <p class="sort ps-4">High To Low</p>
             </div>
           </div>
         </div>
