otp_timer_changes

--- a/bewakoof_login.html
+++ b/bewakoof_login.html
@@ -20,7 +20,7 @@
             <h2>Log in / Sign up</h2>
             <h4>for Latest trends, exciting offers and everything Bewakoof!</h4>
             <div id="Phone">
-              <input type="tel"  id="phone-number" data-initials="+91" placeholder="Enter Mobile Number"  required />
+              <input type="tel"  id="phone-number" data-initials="+91" placeholder="Enter Mobile Number"  pattern="\d{10}" required />
             </div>
             <div id="msg"></div>
              <div id="Phone">
