fixed some issues in css

--- a/home/index.html
+++ b/home/index.html
@@ -41,6 +41,9 @@
       <img src="https://images.bewakoof.com/web/ic-web-head-bwk-primary-logo-eyes.svg" alt="">
     </div>
 
+    <!-- <div id="icon4" style="width: 20% ; border: 2px solid red;">
+      <i class="fa-solid fa-magnifying-glass"></i>
+    </div> -->
 
       <!-- !Nav Mid Section -->
       <div id="nav-mid-section">
@@ -297,13 +300,13 @@
 <!-- !CATEGORIES TO BAG -->
 <div id="categories-div">
 <p class="heading"  style="color: black;">CATEGORIES TO BAG</p>
-<div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Jeans-men-1672915059.png" alt=""></a></div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668772677.jpg" alt=""></a></div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-pyjamas-1668772679.jpg" alt=""></a></div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-2-1669360792.jpg" alt=""></a></div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668773245.jpg" alt=""></a></div>
-  <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-w-pyjamas-2-1675144063.jpg" alt=""></a></div>
+<div class="full-width">
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Jeans-men-1672915059.png" alt=""></a>
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668772677.jpg" alt=""></a>
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-pyjamas-1668772679.jpg" alt=""></a>
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-2-1669360792.jpg" alt=""></a>
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-joggers-1668773245.jpg" alt=""></a>
+  <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-w-pyjamas-2-1675144063.jpg" alt=""></a>
 
 </div>
 </div>
@@ -329,13 +332,13 @@
 <!-- !TOP ACCESSORIES-->
 <div id="categories-div">
   <p class="heading"  style="color: black;">TOP ACCESSORIES</p>
-  <div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Mobile-covers-1672907490.png" alt=""></a></div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-mugs-1673005212.jpg" alt=""></a></div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-backpacks-1672907481.png" alt=""></a></div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-notebooks-1672896372.jpg" alt=""></a></div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-sliders-men-1672907494.png" alt=""></a></div>
-    <div><a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-caps-1672907483.png" alt=""></a></div>
+  <div class="full-width">
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-Mobile-covers-1672907490.png" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-new-mugs-1673005212.jpg" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-backpacks-1672907481.png" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-notebooks-1672896372.jpg" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-sliders-men-1672907494.png" alt=""></a>
+    <a href=""><img src="https://images.bewakoof.com/uploads/grid/app/category-box-caps-1672907483.png" alt=""></a>
   
   </div>
   </div>
