mens page added

--- a/home/index.html
+++ b/home/index.html
@@ -370,7 +370,8 @@
     <img  src="https://images.bewakoof.com/uploads/grid/app/Desktop-Strip-3-1669022420.jpg" alt="">
   </div>
 
-
+<!-- ..............................Scroll to top part ....................................... -->
+<button onclick="topFunction()" id="myBtn" title="Go to top" ><i class="fa-solid fa-angle-up"></i></button>
  
   <!-- !FOTER SECTION -->
   <footer>
@@ -382,3 +383,5 @@
 <script src="/home/script/imgSlider2.js"></script>
 <script src="/home/script/cardSlider.js" type="module"></script>
 <script src="/home/script/nav.js" type="module"></script>
+<script src="/home/script/index.js"></script>
+ 
