--- a/bewakoof_login.html
+++ b/bewakoof_login.html
@@ -48,6 +48,11 @@
                 By creating an account or logging in, you agree with Bewakoof's
                 <a href="">Terms and <br> Conditions</a> and <a href="">Privacy Policy</a>.
               </p> 
+
+              <!-- <p>
+                By creating an account or logging in, you agree with Bewakoof's
+                <a href="">Terms and <br> Conditions</a> and <a href="">Privacy Policy</a>.
+              </p>  -->
            
          </div>
 
